fixing alignment of age in DOB field on firefox and ie11

--- a/app/assets/stylesheets/components/_dob-form-field.scss
+++ b/app/assets/stylesheets/components/_dob-form-field.scss
@@ -21,10 +21,20 @@
   }
 }
 
+.form-dob__inputs-container {
+  float: left;
+}
+
 .form-dob__input {
   width: 64px;
 }
 
 .form-dob__input--year {
   width: 90px;
+}
+
+.form-dob__age {
+  display: inline-block;
+  float: left;
+  margin: 27px 0 0 5px;
 }
